# bitml2mcmas

./: .gitignore  404.html  README.md  index.html  mcmas  mkdocs.yml  pyproject.toml
01-timed-commitment/: output.txt
04-zero-coupon-bond/: output.txt
bitml2mcmas/: __init__.py
bitml2mcmas/bitml/: __init__.py  ast.py  core.py  custom_types.py  exceptions.py  to_string.py  validation.py
bitml2mcmas/bitml/parser/: _cached_lark.py  parser.py
bitml2mcmas/compiler/: check_supported.py  core.py
bitml2mcmas/compiler/_private/: contract_graph.py  contract_wrapper.py  mcmas_builder.py  mcmas_objects.py  terms.py
bitml2mcmas/helpers/: misc.py  validation.py
bitml2mcmas/mcmas/: __init__.py  ast.py  boolcond.py  custom_types.py  exceptions.py  formula.py  to_string.py
bitml2mcmas/mcmas/validation/: is_agent_evolution_condition.py  is_evaluation_condition.py  (+5 more)
docs/: mutual-timed-commitment-tutorial.ipynb  tutorial.ipynb
docs/01-timed-commitment/: contract.ispl
docs/02-mutual-timed-commitment/: contract.ispl  output.txt
docs/03-escrow/: contract.ispl  output.txt
docs/04-zero-coupon-bond/: contract.ispl
docs/mutual-timed-commitment-tutorial-assets/: formula1.dot  model.dot  model.ispl  model_flawed.ispl  output.txt
mutual-timed-commitment-tutorial/: index.html
mutual-timed-commitment-tutorial-assets/: formula1.info  formula2.dot  formula2.info  model.info  model_simple.ispl  model_witness_counterexample.ispl
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  conftest.py  helpers.py  hypothesis.py
tests/bitml_contracts/: __init__.py  code_defined.py
tests/mcmas_wrapper/: base_simulation_test.py  base_verification_test.py  shared.py  simulator.py  wrapper.py
tests/test_bitml/: __init__.py  test_ast.py  test_core.py  test_parser.py  test_to_string.py  test_validation.py
tests/test_compiler/: test_via_simulation.py  test_via_verification.py
tests/test_mcmas/: test_ast.py
tutorial/: index.html
(+44 files in other folders)
