[tool.poetry]
name = "bitml2mcmas"
version = "0.1.0"
description = "BitML strategic reasoning using the MCMAS tool."
authors = ["Marco Favorito"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://marcofavorito/bitml2mcmas"
repository = "https://github.com/marcofavorito/bitml2mcmas.git"
documentation = "https://marcofavorito.github.io/bitml2mcmas"
keywords = []
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
]
#packages = []
include = []



[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lark = "^1.2.2"
notebook = "^7.3.2"

[tool.poetry.group.dev.dependencies]
bandit = "==1.7.9"
codecov = "==2.1.13"
hypothesis = "==6.112.0"
hypothesis-pytest = "==0.19.0"
ipython = "==8.18.0"
jupyter = "==1.1.1"
markdown = "==3.7"
markdown-include = "==0.8.1"
mkdocs = "==1.6.1"
mkdocs-autorefs = "==1.2.0"
mkdocs-bibtex = "==2.16.2"
mkdocs-material = "==9.5.34"
mkdocstrings = "==0.26.1"
mypy = "==1.11.2"
pymdown-extensions = "==10.9"
pytest = "==8.3.2"
pytest-checkipdb = "==1.1.1"
pytest-cov = "==5.0.0"
pytest-randomly = "==3.15.0"
ruff = "==0.6.4"
safety = "==3.2.7"
tox = "==4.11.0"
twine = "==5.1.1"
vulture = "==2.11"
pre-commit = "==3.8.0"
pytest-timeout = "^2.3.1"
mkdocs-jupyter = "^0.25.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
